fixed help line wrapping and key bindings

--- a/help/styles.css
+++ b/help/styles.css
@@ -24,3 +24,4 @@ td.leftcol{padding-right:60px}
 td.dtype{padding-right:15px}
 td.firstrow{border-top:1px solid #ccc}
 p{text-align:justify}
+code{color:#070;}
